--- a/3_pinpoints.ipynb
+++ b/3_pinpoints.ipynb
@@ -725,7 +725,7 @@
     "        pm1[2]=0\n",
     "        dict_joints[\"R_CalfMucle\"]=pm1.copy()\n",
     "        dict_joints[\"R_CalfMucle\"][2]=1\n",
-    "        dict_joints[\"R_Ankle\"][2]=0\n",
+    "        # dict_joints[\"R_Ankle\"][2]=0\n",
     "        dict_joints[\"R_Knee\"][2]=0\n",
     "\n",
     "    if dict_joints[\"L_Ankle\"][2]==1 and dict_joints[\"L_Knee\"][2]==1 and position==2 and leftAngle>166:\n",
@@ -733,7 +733,7 @@
     "        pm2[2]=0\n",
     "        dict_joints[\"L_CalfMucle\"]=pm2.copy()\n",
     "        dict_joints[\"L_CalfMucle\"][2]=1\n",
-    "        dict_joints[\"L_Ankle\"][2]=0\n",
+    "        # dict_joints[\"L_Ankle\"][2]=0\n",
     "        dict_joints[\"L_Knee\"][2]=0\n",
     "        \n",
     "    return dict_joints"
